[package]
name = "AdventOfCode2020"
version = "0.1.0"
authors = ["GrumpyMetalGuy <peter.keyzers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter="0.5"
fehler = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
log4rs = "0.13"
regex="1.4"
ndarray = "0.14"
itertools = "0.9"
memoise = "0.3"
